--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^1.7.19",
-    "@heroicons/react": "^2.1.3",
+    "@heroicons/react": "2.0.18",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,27 +31,33 @@
     "clsx": "^2.1.1",
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.30.0",
-    "dotenv": "^16.3.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^11.2.10",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.381.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "pg-hstore": "^2.3.4",
     "postcss": "8.4.24",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-dark-mode-toggle": "^0.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.10.1",
     "react-input-mask": "^2.0.4",
+    "react-lottie": "^1.2.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "tough-cookie": "^4.1.4",
     "utf-8-validate": "^5.0.10",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "postcss-nested": "^6.0.1",
+    "tailwindcss": "^3.4.4"
   }
 }
