--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.2",
     "axios-cookiejar-support": "^5.0.2",
@@ -33,21 +34,26 @@
     "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "framer-motion": "^11.2.11",
+    "framer-motion": "^11.2.13",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.381.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "pg-hstore": "^2.3.4",
     "postcss": "8.4.24",
     "react": "^18.3.1",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^4.10.1",
     "react-input-mask": "^2.0.4",
     "react-lottie": "^1.2.4",
+    "react-spring": "^9.7.3",
+    "recharts": "^2.12.7",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
@@ -57,6 +63,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.4.4"
   }
