--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "next-themes": "^0.3.0",
     "pg-hstore": "^2.3.4",
     "postcss": "8.4.24",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-dark-mode-toggle": "^0.2.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.52.0",
     "react-icons": "^4.10.1",
@@ -66,5 +66,8 @@
     "@shadcn/ui": "^0.0.4",
     "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.4.4"
+  },
+  "resolutions": {
+    "react": "18.2.0"
   }
 }
