--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-spring/web": "^9.7.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.2",
     "axios-cookiejar-support": "^5.0.2",
@@ -35,6 +36,8 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^11.2.13",
+    "gsap": "^3.12.5",
+    "intersection-observer": "^0.12.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -51,9 +54,13 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^4.10.1",
     "react-input-mask": "^2.0.4",
+    "react-intersection-observer": "^9.10.3",
     "react-lottie": "^1.2.4",
+    "react-scrollama": "^2.3.3",
     "react-spring": "^9.7.3",
+    "react-use-measure": "^2.1.1",
     "recharts": "^2.12.7",
+    "scrollama": "^3.2.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
