--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "clsx": "^2.1.1",
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^3.6.0",
-    "eslint": "9.6.0",
+    "eslint": "8.56.0",
     "eslint-config-next": "14.2.4",
     "framer-motion": "^11.2.13",
     "gsap": "^3.12.5",
@@ -45,6 +45,7 @@
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "pg-hstore": "^2.3.4",
     "postcss": "8.4.39",
     "react": "^18.3.1",
