--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^3.6.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.4",
+    "firebase": "^10.12.3",
     "framer-motion": "^11.2.13",
     "gsap": "^3.12.5",
     "intersection-observer": "^0.12.2",
